--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GDesingn Mall (Pvt) Ltd.</title>
+  <title>GDesign Mall (Pvt) Ltd.</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -56,7 +56,7 @@
 
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
-        <h1 class="text-light"><a href="#intro" class="scrollto"><span>GDesingn Mall</span></a></h1>
+        <h1 class="text-light"><a href="#intro" class="scrollto"><span>GDesign Mall</span></a></h1>
         <!-- <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
       </div>
 
@@ -98,7 +98,7 @@
     <div class="container d-flex h-100">
       <div class="row justify-content-center align-self-center">
         <div class="col-md-6 intro-info order-md-first order-last">
-          <h2>GDesingn Mall Solutions<br>for Your <span>Business!</span></h2>
+          <h2>GDesign Mall Solutions<br>for Your <span>Business!</span></h2>
           <div>
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
@@ -132,7 +132,7 @@
             <div class="about-content">
               <h2>About Us</h2>
               <h3>We're Dynamic Team of Creative People.</h3>
-              <p>GDesingn Mall is a versatile creative and technology solutions provider, offering a comprehensive suite of services to elevate your brand. From crafting captivating visuals and engaging content to developing robust digital platforms and strategies, we are your one-stop shop for all things creative and technical.</p>
+              <p>GDesign Mall is a versatile creative and technology solutions provider, offering a comprehensive suite of services to elevate your brand. From crafting captivating visuals and engaging content to developing robust digital platforms and strategies, we are your one-stop shop for all things creative and technical.</p>
               <!-- <ul>
                 <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
                 <li><i class="ion-android-checkmark-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
@@ -298,7 +298,7 @@
           <div class="col-lg-9 text-center text-lg-left">
             <h3 class="cta-title">Call To Action</h3>
             <p class="cta-text"> Ready to transform your ideas into reality?</p>
-            <p class="cta-text">GDesingn Mall is your trusted partner in achieving your goals. Our dedicated team is committed to delivering exceptional results that exceed your expectations. Let's work together to create something extraordinary.</p>
+            <p class="cta-text">GDesign Mall is your trusted partner in achieving your goals. Our dedicated team is committed to delivering exceptional results that exceed your expectations. Let's work together to create something extraordinary.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">Call To Action</a>
@@ -517,7 +517,7 @@
                 <h3>Person 01</h3>
                 <h4>Ceo &amp; Founder</h4>
                 <p>
-                  I was blown away by the creativity and professionalism of GDesingn Mall's design team. Their logo perfectly captured the essence of my brand. I highly recommend them!
+                  I was blown away by the creativity and professionalism of GDesign Mall's design team. Their logo perfectly captured the essence of my brand. I highly recommend them!
                 </p>
               </div>
     
@@ -526,7 +526,7 @@
                 <h3>Person 02</h3>
                 <h4>Designer</h4>
                 <p>
-                  GDesingn Mall exceeded our expectations with their website development. The site is not only visually stunning but also incredibly user-friendly. Our online presence has never been stronger.
+                  GDesign Mall exceeded our expectations with their website development. The site is not only visually stunning but also incredibly user-friendly. Our online presence has never been stronger.
                 </p>
               </div>
     
@@ -544,7 +544,7 @@
                 <h3>Person 04</h3>
                 <h4>Freelancer</h4>
                 <p>
-                  GDesingn Mall's digital marketing expertise helped us increase our online visibility and drive significant website traffic. Their strategies are data-driven and results-oriented.
+                  GDesign Mall's digital marketing expertise helped us increase our online visibility and drive significant website traffic. Their strategies are data-driven and results-oriented.
                 </p>
               </div>
 
@@ -874,7 +874,7 @@
                 <div class="col-sm-6">
 
                   <div class="footer-info">
-                    <h3>GDesingn Mall</h3>
+                    <h3>GDesign Mall</h3>
                     <p>We provide marketing services to startups & small business to looking for partner for their digital media, design & dev lead generation & communication.</p>
                   </div>
 
