--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
     <!--==========================
       Clients Section
     ============================-->
-    <section id="testimonials">
+    <!-- <section id="testimonials">
       <div class="container">
 
         <header class="section-header">
@@ -548,7 +548,8 @@
 
 
       </div>
-    </section><!-- #testimonials -->
+    </section> -->
+    <!-- #testimonials -->
 
     <!--==========================
       Team Section
@@ -582,7 +583,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/image5.png" class="img-fluid" alt="" style="width: 200px; height: 200px;">
+              <img src="img/image4.png" class="img-fluid" alt="" style="width: 200px; height: 200px;">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Yohan Bandara</h4>
@@ -600,7 +601,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="member">
-              <img src="img/image4.png" class="img-fluid" alt="" style="width: 200px; height: 200px;">
+              <img src="img/image1.png" class="img-fluid" alt="" style="width: 200px; height: 200px;">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Dilip Weerasinghe</h4>
