--- a/index.html
+++ b/index.html
@@ -898,6 +898,7 @@
                   <div class="footer-links">
                     <h4>Contact Us</h4>
                     <address>
+                      GDesign Mall (Pvt) Ltd,<br>
                       No 11, Green Park,<br>
                       Peramuna Road,<br>
                       Wariyapola, Sri Lanka <br>
